tests/baselines/reference/TemplateExpression1.errors.txt
TemplateExpression1.ts(1,17): error TS2304: Cannot find name 'a'.
TemplateExpression1.ts(1,19): error TS1005: '}' expected.


==== TemplateExpression1.ts (2 errors) ====
    var v = `foo ${ a 
                    ~
!!! error TS2304: Cannot find name 'a'.
                      
!!! error TS1005: '}' expected.